--- a/templates/404.html
+++ b/templates/404.html
@@ -1,6 +1,17 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Page not Found</title>
+</head>
+<body>
+	<div id="404">
+	<h1>Error 404: Page not found</h1>
+	<img src="{{ url_for('static', filename='img/notfound.png') }}">
+</div>
+</body>
+</html>
+
 {% extends 'layout.html' %}
 
 {% block body %}
-<h1>Error 404: Page not found</h1>
-<img src="{{ url_for('static', filename='img/notfound.png') }}">
 {% endblock %}
