--- a/templates/includes/_nav.html
+++ b/templates/includes/_nav.html
@@ -1,8 +1,8 @@
 <nav>
-	<ul>
-		<li><a href="{{ url_for('home') }}">Home</a></li>
-		<li><a href="{{ url_for('about') }}">About</a></li>
-		<li><a href="#">View1</a></li>
-		<li><a href="#">View2</a></li>
+	<ul id="nav">
+		<li class="nav-item"><a class="nav-link" href="{{ url_for('home') }}">Home</a></li>
+		<li class="nav-item"><a class="nav-link" href="{{ url_for('about') }}">About</a></li>
+		<li class="nav-item"><a class="nav-link" href="#">View1</a></li>
+		<li class="nav-item"><a class="nav-link" href="#">View2</a></li>
 	</ul>
 </nav>
