--- a/templates/404.html
+++ b/templates/404.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Page not Found</title>
+	<title>Page Not Found</title>
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/404.css') }}">
 </head>
 <body>
-	<div id="404">
 	<h1>Error 404: Page not found</h1>
 	<img src="{{ url_for('static', filename='img/notfound.png') }}">
-</div>
+	<br>
+	<a href="/">return</a>
 </body>
 </html>
-
-{% extends 'layout.html' %}
-
-{% block body %}
-{% endblock %}
