--- a/templates/includes/_footer.html
+++ b/templates/includes/_footer.html
@@ -1,6 +1,11 @@
 <footer>
 	<table class="footer-table">
 		<tr>
+			<th>Links</th>
+			<th>Resources</th>
+			<th>Group Members</th>
+		</tr>
+		<tr>
 			<td><a class="footer-link" href="https://github.com/AshwinK97/SOFE3700-FinalProject">github repository</a></td>
 			<td><a class="footer-link" href="#">python-flask</a></td>
 			<td><a class="footer-link" href="#">Jasindan Rasalingam</td>
@@ -17,7 +22,7 @@
 		</tr>
 		<tr>
 			<td><a class="footer-link" href="#">somethingelse</a></td>
-			<td><a class="footer-link" href="#">google finance</td>
+			<td><a class="footer-link" href="#">Quandl API</td>
 			<td><a class="footer-link" href="#">Ashwin Kamalakannan</td>
 		</tr>
 	</table>
