--- a/static/styles/nav.css
+++ b/static/styles/nav.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: #232f3e;
 }
 
 .nav-item {
