--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,15 +1,23 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-	<h1>Home Page</h1>
+	<div class="section">
+		<h1>View Stocks</h1>
 
-	{% for row in rows %}
-	<table>
-		<tr>
-			<td>{{row["id"]}}</td>
-			<td>{{row["name"]}}</td>
-		</tr>
-	</table>
-	{% endfor %}
+		<table id="stock-table">
+			{% for row in rows %}
+				<tr>
+					<td><a href="/stock/{{row['id']}}">{{row["company"]}} - {{row["name"]}}</a></td>
+				</tr>
+			{% endfor %}
+		</table>
+	</div>
+	
+	<div class="section">
+		<h1>Compare</h1>
+		<form action="">
+			<input type="text" name="stock1">
+		</form>
+	</div>
 	
 {% endblock %}
