--- a/templates/includes/_nav.html
+++ b/templates/includes/_nav.html
@@ -1,7 +1,7 @@
 <nav>
 	<ul id="nav">
-		<li class="nav-item"><a class="nav-link" href="{{ url_for('home') }}">Home</a></li>
-		<li class="nav-item"><a class="nav-link" href="{{ url_for('about') }}">About</a></li>
+		<li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+		<li class="nav-item"><a class="nav-link" href="/about">About</a></li>
 		<li class="nav-item"><a class="nav-link" href="#">View1</a></li>
 		<li class="nav-item"><a class="nav-link" href="#">View2</a></li>
 	</ul>
