manually merged plotting with master

--- a/templates/includes/_footer.html
+++ b/templates/includes/_footer.html
@@ -26,4 +26,19 @@
 			<td><a class="footer-link" href="#">Ashwin Kamalakannan</td>
 		</tr>
 	</table>
+
+	<!-- D3.js -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
+	<!-- jQuery -->
+	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+	<!-- Plotly.js -->
+	<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+
+	<script type="text/javascript">
+		var graphs = {{graphJSON | safe}};
+		var ids = {{ids | safe}};
+		for(var i in graphs) {
+			Plotly.plot(ids[i], graphs[i].data, graphs[i].layout);
+		}
+	</script>
 </footer>
