--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" href="{{ url_for('static', filename='styles/nav.css') }}">
 	<link rel="stylesheet" href="{{ url_for('static', filename='styles/layout.css') }}">
 	<link rel="stylesheet" href="{{ url_for('static', filename='styles/footer.css') }}">
+	<link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
 </head>
 <body>
 	<div id="nav-div">
