added graph/ticker page, fixing stock/ticker bug

--- a/templates/stock.html
+++ b/templates/stock.html
@@ -4,6 +4,7 @@
 	<h1>{{info["company"]}}</h1>
 	<h2>{{info["name"]}}</h2>
 	
+	<a href="/graph/{{info['id']}}">see graph</a>
 	{{ table|safe }}
 	
 {% endblock %}
