--- a/static/styles/layout.css
+++ b/static/styles/layout.css
@@ -25,8 +25,7 @@ h1, h2 {
 #stock-table {
     border-collapse: collapse;
     width: 100%;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 5% auto;
     counter-reset: rowNumber;
 }
 
