--- a/templates/graph.html
+++ b/templates/graph.html
@@ -1,14 +1,14 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-	<h1>View1</h1>
+	<h1>{{ name }}</h1>
 
 	{% for id in ids %}
-	<div id="{{id}}"></div>
+		<div id="{{id}}"></div>
 	{% endfor %}
 
 	{% for table in tables %}
-	{{ table|safe }}
+		{{ table|safe }}
 	{% endfor %}
 	
 {% endblock %}
