--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,23 +1,42 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-	<div class="section">
-		<h1>View Stocks</h1>
+	<form action="">
+		<div class="section">
+			<h1>View Stocks</h1>
 
-		<table id="stock-table">
-			{% for row in rows %}
-				<tr>
-					<td><a href="/stock/{{row['id']}}">{{row["company"]}} - {{row["name"]}}</a></td>
-				</tr>
-			{% endfor %}
-		</table>
-	</div>
-	
-	<div class="section">
-		<h1>Compare</h1>
-		<form action="">
-			<input type="text" name="stock1">
-		</form>
-	</div>
+			<table id="stock-table">
+				{% for row in rows %}
+					<tr>
+						<td>
+							<a href="/stock/{{row['id']}}">{{row["company"]}} - {{row["name"]}}</a>
+						</td>
+						<!--<td>
+							<input type="checkbox" name={{row["name"]}} id={{row["id"]}} class="pure-checkbox">
+						</td>-->
+					</tr>
+				{% endfor %}
+			</table>
+		</div>
+		
+		<div class="section">
+			<div class="pure-g">
+				<select class="pure-u-1-2" name="compare-1">
+					{% for row in rows %}
+						<option value={{row["name"]}}>{{row["company"]}}</option>
+						{% endfor %}
+				</select>
+				<select class="pure-u-1-2" name="compare-2">
+					{% for row in rows %}
+						<option value={{row["name"]}}>{{row["company"]}}</option>
+					{% endfor %}
+				</select>
+			</div>
+			<hr class="rule">
+			<div class="pure-g">
+				<input type="button" value="Compare" class="pure-button button-xlarge pure-u-1">
+			</div>
+		</div>
+	</form>
 	
 {% endblock %}
