--- a/templates/includes/_footer.html
+++ b/templates/includes/_footer.html
@@ -1,18 +1,20 @@
-<div id="footer">
-	<ul class="left">
-		<li class="footer-header">Links</li>
-		<li><a class="footer-link" href="https://github.com/AshwinK97/SOFE3700-FinalProject">github repository</a></li>
-		<li><a class="footer-link" href="#">somethingidk</a></li>
-		<li><a class="footer-link" href="#">somethingidk</a></li>
-		<li><a class="footer-link" href="#">somethingidk</a></li>
-	</ul>
+<div id="footer" class="pure-g">
+	<div class="pure-u-1-3">
+		<ul class="left">
+			<li class="footer-header">Links</li>
+			<li><a class="footer-link" href="https://github.com/AshwinK97/SOFE3700-FinalProject">github repository</a></li>
+		</ul>
+	</div>
+	<div class="pure-u-1-3">
 	<ul class="right">
 		<li class="footer-header">Group Members</li>
 		<li><a class="footer-link" href="https://github.com/jasindan97">Jasindan Rasalingam</a></li>
 		<li><a class="footer-link" href="https://github.com/DarronSingh">Darron Singh</a></li>
-		<li><a class="footer-link" href="https://github.com/Artemis854">Kashal Patel</a></li>
+		<li><a class="footer-link" href="https://github.com/Artemis854">Kaushal Patel</a></li>
 		<li><a class="footer-link" href="https://github.com/AshwinK97">Ashwin Kamalakannan</a></li>
 	</ul>
+	</div>
+	<div class="pure-u-1-3">
 	<ul class="center">
 		<li class="footer-header">Resources</li>
 		<li><a class="footer-link" href="http://flask.pocoo.org/">python-flask</a></li>
@@ -20,7 +22,8 @@
 		<li><a class="footer-link" href="https://plot.ly/">plotly</a></li>
 		<li><a class="footer-link" href="https://www.quandl.com/tools/api">Quandl API</a></li>
 	</ul>
-	<div id="legal">
+	</div>
+	<div id="legal" class="pure-u-1">
 		Copyright © 2017 SOFE3700. All rights reserved.
 	</div>
 </div>
@@ -33,9 +36,9 @@
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
 <script type="text/javascript">
-	var graphs = {{graphJSON | safe}};
-	var ids = {{ids | safe}};
+	var graphs = {{graphJSON | safe}}
+	var ids = {{ids | safe}}
 	for(var i in graphs) {
-		Plotly.plot(ids[i], graphs[i].data, graphs[i].layout);
+		Plotly.plot(ids[i], graphs[i].data, graphs[i].layout)
 	}
 </script>
