--- a/templates/includes/_footer.html
+++ b/templates/includes/_footer.html
@@ -2,7 +2,7 @@
 	<div class="pure-u-1-3">
 		<ul class="left">
 			<li class="footer-header">Links</li>
-			<li><a class="footer-link" href="https://github.com/AshwinK97/SOFE3700-FinalProject">github repository</a></li>
+			<li><a class="footer-link" href="https://github.com/AshwinK97/SOFE3700-FinalProject">github</a></li>
 		</ul>
 	</div>
 	<div class="pure-u-1-3">
