--- a/static/styles/footer.css
+++ b/static/styles/footer.css
@@ -13,6 +13,7 @@
 .footer-header {
 	color: white;
 	font-weight: bold;
+	padding-bottom: 12px;
 }
 
 .left {
@@ -33,7 +34,7 @@
 .footer-link {
     display: block;
     color: white;
-    padding: 10px 16px;
+    padding: 12px 16px;
     text-decoration: none;
 }
 
