--- a/templates/includes/_footer.html
+++ b/templates/includes/_footer.html
@@ -1,11 +1,11 @@
-<div id="footer" class="pure-g">
-	<div class="pure-u-1-3">
-		<ul class="left">
-			<li class="footer-header">Links</li>
-			<li><a class="footer-link" href="https://github.com/AshwinK97/SOFE3700-FinalProject">github</a></li>
-		</ul>
-	</div>
-	<div class="pure-u-1-3">
+<div id="footer">
+	<ul class="left">
+		<li class="footer-header">Links</li>
+		<li><a class="footer-link" href="https://github.com/AshwinK97/SOFE3700-FinalProject">Github Repository</a></li>
+		<li><a class="footer-link" href="https://jquery.com/">jQuery</a></li>
+		<li><a class="footer-link" href="https://purecss.io/">Pure.css</a></li>
+		<li><a class="footer-link" href="https://d3js.org/">D3.js</a></li>
+	</ul>
 	<ul class="right">
 		<li class="footer-header">Group Members</li>
 		<li><a class="footer-link" href="https://github.com/jasindan97">Jasindan Rasalingam</a></li>
@@ -13,8 +13,6 @@
 		<li><a class="footer-link" href="https://github.com/Artemis854">Kaushal Patel</a></li>
 		<li><a class="footer-link" href="https://github.com/AshwinK97">Ashwin Kamalakannan</a></li>
 	</ul>
-	</div>
-	<div class="pure-u-1-3">
 	<ul class="center">
 		<li class="footer-header">Resources</li>
 		<li><a class="footer-link" href="http://flask.pocoo.org/">python-flask</a></li>
@@ -22,8 +20,7 @@
 		<li><a class="footer-link" href="https://plot.ly/">plotly</a></li>
 		<li><a class="footer-link" href="https://www.quandl.com/tools/api">Quandl API</a></li>
 	</ul>
-	</div>
-	<div id="legal" class="pure-u-1">
+	<div id="legal">
 		Copyright © 2017 SOFE3700. All rights reserved.
 	</div>
 </div>
