--- a/templates/includes/_nav.html
+++ b/templates/includes/_nav.html
@@ -2,6 +2,6 @@
 	<ul id="nav">
 		<li class="nav-item"><a class="nav-link" href="/">Home</a></li>
 		<li class="nav-item"><a class="nav-link" href="/about">About</a></li>
-		<li class="nav-item"><a class="nav-link" href="#">View1</a></li>
+		<li class="nav-item"><a class="nav-link" href="/compare">Compare</a></li>
 	</ul>
 </nav>
