--- a/templates/compare.html
+++ b/templates/compare.html
@@ -3,8 +3,7 @@
 {% block body %}
 	<h1>Compare</h1>
 	
-	<div>
-		<h3>comparing ticker {{data[0]}} and ticker {{data[1]}}</h3>
+	<div class="{{visible}}">
 		<!-- graph goes here, only if --> 
 		<!-- example: compare?compare1=AAPL&compare2=GOOGL -->
 	</div>
