--- a/templates/includes/_footer.html
+++ b/templates/includes/_footer.html
@@ -2,9 +2,8 @@
 	<ul class="left">
 		<li class="footer-header">Links</li>
 		<li><a class="footer-link" href="https://github.com/AshwinK97/SOFE3700-FinalProject">Github Repository</a></li>
-		<li><a class="footer-link" href="https://jquery.com/">jQuery</a></li>
+		<li><a class="footer-link" href="https://plot.ly/">Plotly</a></li>
 		<li><a class="footer-link" href="https://purecss.io/">Pure.css</a></li>
-		<li><a class="footer-link" href="https://d3js.org/">D3.js</a></li>
 	</ul>
 	<ul class="right">
 		<li class="footer-header">Group Members</li>
@@ -17,7 +16,6 @@
 		<li class="footer-header">Resources</li>
 		<li><a class="footer-link" href="http://flask.pocoo.org/">python-flask</a></li>
 		<li><a class="footer-link" href="https://www.sqlite.org/">sqlite3</a></li>
-		<li><a class="footer-link" href="https://plot.ly/">plotly</a></li>
 		<li><a class="footer-link" href="https://www.quandl.com/tools/api">Quandl API</a></li>
 	</ul>
 	<div id="legal">
