--- a/templates/compare.html
+++ b/templates/compare.html
@@ -14,16 +14,23 @@
 	<form method="GET">
 		<div class="section">
 			<div class="pure-g">
-				<select class="pure-u-1-2" name="compare1" size="10">
+				<select class="pure-u-1-3" name="compare1" size="10">
 					{% for ticker in tickers %}
 						<option value={{ticker["id"]}}>{{ticker["name"]}} - {{ticker["company"]}}</option>
 					{% endfor %}
 				</select>
-				<select class="pure-u-1-2" name="compare2" size="10">
+				<select class="pure-u-1-3" name="compare2" size="10">
 					{% for ticker in tickers %}
 						<option value={{ticker["id"]}}>{{ticker["name"]}} - {{ticker["company"]}}</option>
 					{% endfor %}
 				</select>
+				<select class="pure-u-1-3" name="attr" size="10">
+							<option value="open">Open</option>
+							<option value="close">Close</option>
+							<option value="high">High</option>
+							<option value="low">Low</option>
+							<option value="volume">Volume</option>
+					</select>
 			</div>
 			<hr class="rule">
 			<div class="pure-g"><input type="submit" value="Compare" class="pure-button button-xlarge pure-u-1"></div>
