--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -7,7 +7,7 @@
 			{% for row in rows %}
 				<tr>
 					<td>
-						<a href="/stock/{{row['id']}}">{{row["company"]}} - {{row["name"]}}</a>
+						<a href="/stock/{{row['id']}}/0">{{row["company"]}} - {{row["name"]}}</a>
 					</td>
 				</tr>
 			{% endfor %}
