Added dynamic title to compare

--- a/templates/compare.html
+++ b/templates/compare.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-	<h1>Compare</h1>
+	<h1>Compare {{title}}</h1>
 	
 	<div class="{{visible}}">
 		<!-- graph goes here, only if --> 
