--- a/templates/includes/_footer.html
+++ b/templates/includes/_footer.html
@@ -2,6 +2,7 @@
 	<ul class="left">
 		<li class="footer-header">Links</li>
 		<li><a class="footer-link" href="https://github.com/AshwinK97/SOFE3700-FinalProject">Github Repository</a></li>
+		<li><a class="footer-link" href="https://uoit.ca/index.php">UOIT</a></li>
 		<li><a class="footer-link" href="https://plot.ly/">Plotly</a></li>
 		<li><a class="footer-link" href="https://purecss.io/">Pure.css</a></li>
 	</ul>
@@ -16,6 +17,7 @@
 		<li class="footer-header">Resources</li>
 		<li><a class="footer-link" href="http://flask.pocoo.org/">python-flask</a></li>
 		<li><a class="footer-link" href="https://www.sqlite.org/">sqlite3</a></li>
+		<li><a class="footer-link" href="https://www.quandl.com/tools/api">Quandl API</a></li>
 		<li><a class="footer-link" href="https://www.quandl.com/tools/api">Quandl API</a></li>
 	</ul>
 	<div id="legal">
