--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>Flask App</title>
+	<link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}" type="image/x-icon">
+	<link rel="icon" href="{{ url_for('static', filename='img/favicon.ico') }}" type="image/x-icon">
 	<link rel="stylesheet" href="{{ url_for('static', filename='styles/nav.css') }}">
 	<link rel="stylesheet" href="{{ url_for('static', filename='styles/layout.css') }}">
 	<link rel="stylesheet" href="{{ url_for('static', filename='styles/footer.css') }}">
