--- a/templates/stock.html
+++ b/templates/stock.html
@@ -4,7 +4,7 @@
 	<h1>{{ info["company"] }}</h1>
 	<h2>{{ info["name"] }} </h2>
 	<a href="/graph/{{info['id']}}">
-		<div class="pure-button">Go To Graph</div>
+		<div class="pure-button">View Graph</div>
 	</a>
 	<div id="stock-table">
 		<h4>Showing 50 rows from page {{page}}</h4>
