added api info to page and readme

--- a/templates/about.html
+++ b/templates/about.html
@@ -18,7 +18,7 @@
 		</ul>
 		<!-- API -->
 		<p>
-			We also included a public API that can be used to request the raw data in our database. This api is capable of taking complex parameters and returning the relevant data in JSON format. The requested data can be used freely for all of your application building and analytical needs.
+			We also included a <a href="/about/api">public API</a> that can be used to request the raw data in our database. This api is capable of taking complex parameters and returning the relevant data in JSON format. The requested data can be used freely for all of your application building and analytical needs.
 		</p>
 	</div>
 {% endblock %}
