--- a/templates/includes/_nav.html
+++ b/templates/includes/_nav.html
@@ -5,6 +5,7 @@
 		<li class="nav-item"><a class="nav-link" href="/compare">Compare</a></li>
 		<!-- right -->
 		<li class="nav-item-right"><a class="nav-link" href="https://github.com/AshwinK97/SOFE3700-FinalProject">Repo</a></li>
+		<li class="nav-item-right"><a class="nav-link" href="/about/api">API</a></li>
 		<li class="nav-item-right"><a class="nav-link" href="/about">About</a></li>
 	</ul>
 </nav>
