--- a/templates/graph.html
+++ b/templates/graph.html
@@ -6,6 +6,22 @@
 
 	{% for id in ids %}
 		<div id="{{id}}"></div>
+		<form action="/graph/{{ticker}}" class="pure-form">
+			<div class="pure-g">
+				<div class="pure-u-1-2">
+					<label for="start">Start Date:</label>
+					<input class="pure-u-23-24" type="date" name="date_start" id="start">
+				</div>
+				<div class="pure-u-1-2">
+					<label for="end">End Date:</label>
+					<input class="pure-u-23-24" type="date" name="date_end" id="end">
+				</div>
+				<hr>
+				<div class="pure-u-1">
+					<input class="pure-button button-xlarge pure-u-1" type="submit" value="Run" class="pure-button button-xlarge pure-u-1">
+				</div>
+			</div>
+		</form>
 	{% endfor %}
 	
 {% endblock %}
