--- a/templates/graph.html
+++ b/templates/graph.html
@@ -10,13 +10,23 @@
 
 		<h2>Indicators</h2>
 		<form action="/graph/{{ticker}}">
-			<div class="pure-g">
+			<div class="pure-form">
 				<div class="pure-u-1">
-					<input class="pure-u-1-6 button-secondary pure-button" type="submit" value="RSI">
-					<input class="pure-u-1-6 button-secondary pure-button" type="submit" value="SMA">
-					<input class="pure-u-1-6 button-secondary pure-button" type="submit" value="MACD">
-					<input class="pure-u-1-6 button-secondary pure-button" type="submit" value="OBV">
-					<input class="pure-u-1-6 button-secondary pure-button" type="submit" value="VWAP">
+					<div class="pure-u-1-2">
+						<label for="RSI" class="pure-checkbox">RSI</label>
+						<input class="pure-u-1-5" name="RSI" id="RSI" type="checkbox">
+						<label for="SMA" class="pure-checkbox">SMA</label>
+						<input class="pure-u-1-5" name="SMA" id="SMA" type="checkbox">
+						<label for="MACD" class="pure-checkbox">MACD</label>
+						<input class="pure-u-1-5" name="MACD" id="MACD" type="checkbox">
+						<label for="OBV" class="pure-checkbox">OBV</label>
+						<input class="pure-u-1-5" name="OBV" id="OBV" type="checkbox">
+						<label for="Volume" class="pure-checkbox">Volume</label>
+						<input class="pure-u-1-5" name="Volume" id="Volume" type="checkbox">
+					</div>
+					<div class="pure-u-1-3">
+						<input class="pure-u-1 pure-button" type="submit" value="Run">
+					</div>
 				</div>
 			</div>
 		</form>
