--- a/templates/compare.html
+++ b/templates/compare.html
@@ -9,25 +9,25 @@
 		{% endfor %}
 	</div>
 
-	<form method="GET" class="pure-form">
+	<form method="GET">
 		<div class="section">
 			<div class="pure-g">
 				<div class="pure-u-1-3">
-					<select class="pure-u-23-24" name="compare1" >
+					<select class="pure-u-23-24" name="compare1" size="13">
 						{% for ticker in tickers %}
 							<option value={{ticker["id"]}}>{{ticker["name"]}} - {{ticker["company"]}}</option>
 						{% endfor %}
 					</select>
 				</div>
 				<div class="pure-u-1-3">
-					<select class="pure-u-23-24" name="compare2" >
+					<select class="pure-u-23-24" name="compare2" size="13">
 						{% for ticker in tickers %}
 							<option value={{ticker["id"]}}>{{ticker["name"]}} - {{ticker["company"]}}</option>
 						{% endfor %}
 					</select>
 				</div>
 				<div class="pure-u-1-3">
-					<select class="pure-u-23-24" name="attr" >
+					<select class="pure-u-23-24" name="attr" size="13">
 						<option value="open">Open</option>
 						<option value="close">Close</option>
 						<option value="high">High</option>
