fixed footer styling

--- a/static/styles/footer.css
+++ b/static/styles/footer.css
@@ -2,10 +2,7 @@
 	position: relative;
 	margin-top: 5%;
 	margin-bottom: 0%;
-	padding-left: 25%;
-	padding-right: 25%;
-	padding-top: 1%;
-	padding-bottom: 1%;
+	padding: 1% 15%;
 	text-align: center;
 	background-color: #232f3e;
 }
