--- a/templates/compare.html
+++ b/templates/compare.html
@@ -13,7 +13,6 @@
 		<div class="section">
 			<div class="pure-g">
 				<div class="pure-u-1-3">
-					<select class="pure-u-23-24" name="compare1">
 					<select class="pure-u-23-24" name="compare1" size="13">
 						{% for ticker in tickers %}
 							<option value={{ticker["id"]}}>{{ticker["name"]}} - {{ticker["company"]}}</option>
@@ -21,7 +20,7 @@
 					</select>
 				</div>
 				<div class="pure-u-1-3">
-					<select class="pure-u-23-24" name="compare2">
+					<select class="pure-u-23-24" name="compare2" size="13">
 						{% for ticker in tickers %}
 							<option value={{ticker["id"]}}>{{ticker["name"]}} - {{ticker["company"]}}</option>
 						{% endfor %}
